fixed flicker bug on tab change, introduced local storage

--- a/src/components/Validator.css
+++ b/src/components/Validator.css
@@ -36,7 +36,6 @@ input {
 .GridContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
     margin: 4px auto 4px auto;
     width: 75%;
 }
